--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -48,6 +48,8 @@
             display: flex;
             flex-direction: column;
             padding: 20px;
+            height: 100%;           /* ensure it fills grid cell */
+            min-height: 0;           /* allow children to shrink */
         }
         .chat-header {
             display: flex;
@@ -69,8 +71,9 @@
             letter-spacing: -0.5px;
         }
         .chat-messages {
-            flex: 1;
-            overflow-y: auto;
+            flex: 1 1 auto;          /* take remaining space */
+            overflow-y: auto;         /* enable scrolling */
+            min-height: 0;            /* important for flex scrolling */
             display: flex;
             flex-direction: column;
             gap: 16px;
@@ -104,11 +107,12 @@
             backdrop-filter: blur(4px);
             padding: 12px 16px;
             border-radius: 20px;
-            max-width: 240px;
+            max-width: 350px;         /* increased for longer messages */
             color: #e2e8f0;
             font-size: 0.9rem;
             line-height: 1.5;
             border: 1px solid rgba(255,255,255,0.05);
+            word-wrap: break-word;    /* ensure long words wrap */
         }
         .message.user .bubble {
             background: #6c5ce7;
